--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,13 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <repositories>
+        <repository>
+            <id>clojars</id>
+            <url>https://repo.clojars.org/</url>
+        </repository>
 
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -21,11 +27,14 @@
             <artifactId>tess4j</artifactId>
             <version>4.1.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.clojars.dulouser/libretranslate-java -->
         <dependency>
-            <groupId>com.google.cloud</groupId>
-            <artifactId>google-cloud-translate</artifactId>
-            <version>1.94.5</version>
+            <groupId>net.clojars.dulouser</groupId>
+            <artifactId>libretranslate-java</artifactId>
+            <version>1.0.7</version>
         </dependency>
+
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
